creusot/tests/should_fail/prusti/match/in_spec.stderr
error[creusot]: expected `&mut u32` found `creusot_contracts::__stubs::__prusti::Zombie<&'curr mut u32>`
 --> in_spec.rs:4:19
  |
4 | #[ensures(*(if b {x} else {result}) == 5u32)]
  |                   ^

error: aborting due to previous error

